centos/firewall.rules
*security
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j DROP
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 3306 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport startport:endport -m state --state NEW -j ACCEPT
-A INPUT -p udp -m udp --dport startport:endport -m state --state NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport startport:endport -m connlimit --connlimit-above cnlt --connlimit-mask 32 --connlimit-saddr -j REJECT --reject-with tcp-reset
-A INPUT -p icmp -m icmp --icmp-type 8 -m limit --limit 5/sec -j ACCEPT
-A INPUT -j LOG
-A INPUT -j DROP
-A FORWARD -m string --string "BitTorrent" --algo bm -j DROP
-A FORWARD -m string --string "peer_id=" --algo bm -j DROP
-A FORWARD -m string --string ".torrent" --algo bm -j DROP
-A FORWARD -m string --string "passkey=" --algo bm -j DROP
-A FORWARD -m string --string "announce.php?" --algo bm -j DROP
-A FORWARD -m string --string "info_hash" --algo bm -j DROP
-A FORWARD -m string --string "get_peers" --algo bm -j DROP
-A FORWARD -m string --string "announce_peer" --algo bm -j DROP
-A FORWARD -m string --string "find_node" --algo bm -j DROP
-A FORWARD -m string --string "magnet:" --algo bm -j DROP
-A FORWARD -m string --string "xunlei" --algo bm -j DROP
-A FORWARD -m string --string "sandai" --algo bm -j DROP
-A FORWARD -m string --string "XLLiveUD" --algo bm -j DROP
-A FORWARD -m string --hex-string "|13426974546f7272656e742070726f746f636f6c|" --algo bm -j DROP
-A FORWARD -p udp -m string --string "tracker" --algo bm --to 65535 -j DROP
-A FORWARD -p tcp -m tcp --dport 6969 -j DROP
-A FORWARD -p tcp -m tcp --dport 6881:6889 -j DROP
-A OUTPUT -o lo -j ACCEPT
COMMIT
